Revert "Update index.html"
This reverts commit 5eef56675b1bdcf50f0584aa9530b50b8d5950f9.

--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
                                     rewrote it in Python. The interface can be integrated easily to websites but I have
                                     created a Discord bot to attract the younger people.
                                 </p>
+                                <p class="ae-4"><span id="BotDynDescription" class="opacity-8">Currently serving 0
+                                        Discord servers with 0 users in total.</span></p>
                                 <a href="https://discord.com/api/oauth2/authorize?client_id=940968101627969598&permissions=277025410048&scope=bot%20applications.commands"
                                     target="_blank" class="button blue gradient cropBottom ae-7 fromCenter"><i
                                         class="material-icons small">add_box</i>Invite Bot</a>
