--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </section>
 
     <!-- Discord Bot (#73) -->
-    <section data-name="DiscordBot" class="slide fade-6 kenBurns">
+    <section data-name="exchange" class="slide fade-6 kenBurns">
         <div class="content">
             <div class="container">
                 <div class="wrap">
@@ -131,7 +131,7 @@
         </nav>
     </section>
     <!-- Games (#89) -->
-    <section data-name="Games" class="slide fade-6 kenBurns">
+    <section data-name="Beryllium" class="slide fade-6 kenBurns">
         <div class="content">
             <div class="container">
                 <div class="wrap">
