--- a/test/index.html
+++ b/test/index.html
@@ -3,18 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.1.1/model-viewer.min.js"></script>
-
-  <title>Document</title>
-  <style>
-    model-viewer {width: 800px; height: 600px; margin: auto;}
-  </style>
+  <meta http-equiv="Refresh" content="0; url='https://karkkainen.net'" />
+  <title>Redirecting...</title>
 </head>
 <body>
- <!-- Import the component -->
-<script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.1.1/model-viewer.min.js"></script>
-
-<!-- Use it like any other HTML element -->
-  <model-viewer src="scene.gltf" camera-controls touch-action="pan-y"></model-viewer>
+  
 </body>
 </html>
