--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <!-- Custom Scripts -->
     <!-- <script src="js/custom.js" type="text/javascript"></script> -->
-    
+
     <!-- Fonts and Material Icons -->
     <link rel="stylesheet" as="font"
         href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,600,700|Material+Icons" />
@@ -178,13 +178,11 @@
                         <ul class="flex left">
                             <li class="col-6-12 fromBottomLeft">
                                 <h1 class="ae-2">Converting PP-215 Flip Clock timer to 230v</h1>
-                                <div class="ae-3">
-                                    <p class="opacity-8">PP-215 is a beautiful 70s Japan Made flip clock timer used to
-                                        power up electronics (e.g. audio equipment) at the same time.</p>
-                                    <p class="opacity-8">In this project I will convert the Japan model to work on 230v
+                                    <p class="opacity-8">In this project I will convert an old 100v Flip Clock to work on 230v
                                         outlets using 3D printing, Arduino Nano, RTC module and a 28BYJ48 stepper motor.
                                     </p>
-                                    <p class="opacity-8">I created that 3D model of the clock mechanism on the right using RealityScan and used it to create the motor holder model.
+                                    <p class="opacity-8">I created that 3D model of the clock mechanism on the right
+                                        using RealityScan and used it to create the motor holder model.
                                     </p>
                                 </div>
                                 <a href="projects/open.html?project=PP-215" target="_blank"
@@ -193,9 +191,9 @@
                             </li>
                             <li class="col-1-12">&nbsp;</li>
                             <li class="col-5-12 bottom">
-                                <img src="assets/img/pp-215.png" data-action="zoom" class="shadow rounded ae-8"
-                                    alt="Image" />
-                                <model-viewer id="viewer" class="shadow rounded ae-8" src="https://raw.githubusercontent.com/JAAKKQ/PP-215/main/media/3D/pp-215-2/scene.gltf" camera-controls="" touch-action="pan-y" ar-status="not-presenting"></model-viewer>
+                                <model-viewer id="viewer" class="shadow rounded ae-8"
+                                    src="https://raw.githubusercontent.com/JAAKKQ/PP-215/main/media/3D/pp-215-2/scene.gltf"
+                                    camera-controls="" touch-action="pan-y" ar-status="not-presenting"></model-viewer>
                             </li>
                         </ul>
                     </div>
