--- a/index.html
+++ b/index.html
@@ -191,6 +191,8 @@
                             </li>
                             <li class="col-1-12">&nbsp;</li>
                             <li class="col-5-12 bottom">
+                                <img src="assets/img/pp-215.png" data-action="zoom" class="shadow rounded ae-8"
+                                    alt="Image" />
                                 <model-viewer id="viewer" class="shadow rounded ae-8"
                                     src="https://raw.githubusercontent.com/JAAKKQ/PP-215/main/media/3D/pp-215-2/scene.gltf"
                                     camera-controls="" touch-action="pan-y" ar-status="not-presenting"></model-viewer>
