--- a/index.html
+++ b/index.html
@@ -178,7 +178,10 @@
                         <ul class="flex left">
                             <li class="col-6-12 fromBottomLeft">
                                 <h1 class="ae-2">Converting PP-215 Flip Clock timer to 230v</h1>
-                                    <p class="opacity-8">In this project I will convert an old 100v Flip Clock to work on 230v
+                                <div class="ae-3">
+                                    <p class="opacity-8">PP-215 is a beautiful 70s Japan Made flip clock timer used to
+                                        power up electronics (e.g. audio equipment) at the same time.</p>
+                                    <p class="opacity-8">In this project I will convert the Japan model to work on 230v
                                         outlets using 3D printing, Arduino Nano, RTC module and a 28BYJ48 stepper motor.
                                     </p>
                                     <p class="opacity-8">I created that 3D model of the clock mechanism on the right
