--- a/index.html
+++ b/index.html
@@ -178,10 +178,7 @@
                         <ul class="flex left">
                             <li class="col-6-12 fromBottomLeft">
                                 <h1 class="ae-2">Converting PP-215 Flip Clock timer to 230v</h1>
-                                <div class="ae-3">
-                                    <p class="opacity-8">PP-215 is a beautiful 70s Japan Made flip clock timer used to
-                                        power up electronics (e.g. audio equipment) at the same time.</p>
-                                    <p class="opacity-8">In this project I will convert the Japan model to work on 230v
+                                    <p class="opacity-8">In this project I will convert an old 100v Flip Clock to work on 230v
                                         outlets using 3D printing, Arduino Nano, RTC module and a 28BYJ48 stepper motor.
                                     </p>
                                     <p class="opacity-8">I created that 3D model of the clock mechanism on the right
@@ -194,8 +191,6 @@
                             </li>
                             <li class="col-1-12">&nbsp;</li>
                             <li class="col-5-12 bottom">
-                                <img src="assets/img/pp-215.png" data-action="zoom" class="shadow rounded ae-8"
-                                    alt="Image" />
                                 <model-viewer id="viewer" class="shadow rounded ae-8"
                                     src="https://raw.githubusercontent.com/JAAKKQ/PP-215/main/media/3D/pp-215-2/scene.gltf"
                                     camera-controls="" touch-action="pan-y" ar-status="not-presenting"></model-viewer>
