--- a/projects/index.html
+++ b/projects/index.html
@@ -16,7 +16,7 @@
 <header>
     <ul class="nav-container">
         <li>
-            <a href="../index.html">R3NE.NET</a>
+            <a href="../index.html">Home</a>
         </li>
         <li>
             <a href="../records/index.html">Vinyl Records</a>
