Alert bar and animations

--- a/index.html
+++ b/index.html
@@ -58,12 +58,15 @@
     <!-- Home (#82) -->
     <section data-name="Home" class="slide fade-6 kenBurns">
         <div class="content">
+            <div class="light ae-3 fromTop" id="alert-box">
+                <p>R3ne.net is now Karkkainen.net!</p>
+              </div>  
             <div class="container">
                 <div class="wrap">
                     <div class="fix-6-12 noSelect">
                         <div class="fix-7-12 margin-top-2">
-                            <h1 class="ae-5 fronLeft">R3ne Kärkkäinen</h1>
-                            <div class="light ae-6 fromrRight">
+                            <h1 class="ae-3 fronLeft">Rene Kärkkäinen</h1>
+                            <div class="light ae-3 fromrRight">
                                 <p class="opacity-8">I am a Finnish technology enthusiast who enjoys creating games,
                                     software,
                                     and other
@@ -124,14 +127,14 @@
             <div class="sections desktop">
                 <div class="left">
                     <ul class="menu uppercase">
-                        <li><a href="./DiscordBot/index.html" target="_blank">View Legal Documents</a></li>
+                        <li><a class="light ae-6 fromBottom" href="./DiscordBot/index.html" target="_blank">View Legal Documents</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
     </section>
     <!-- Games (#89) -->
-    <section data-name="Beryllium" class="slide fade-6 kenBurns">
+    <section data-name="Beryllium" class="slide fade-3 kenBurns">
         <div class="content">
             <div class="container">
                 <div class="wrap">
