New Background for vinyl page

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                 </div>
             </div>
         </div>
-        <div class="background" style="background-image: url(assets/img/background/dog-dj.gif) "></div>
+        <div class="background" style="background-image: url(assets/img/background/record-store.jpg) "></div>
     </section>
     <!-- End (#95) -->
     <section data-name="contact" class="slide fade-6 kenBurns">
