--- a/records/old/moreinfo.html
+++ b/records/old/moreinfo.html
@@ -5,6 +5,7 @@
     <title>More Information</title>
     <link rel="icon" href="logo.gif">
     <link rel="stylesheet" href="morestyle.css">
+    <meta name="robots" content="noindex">
 </head>
 
 <body>
