--- a/records/old/index.html
+++ b/records/old/index.html
@@ -13,6 +13,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Vinyylit">
     <meta name="mobile-web-app-capable" content="yes">
+    <meta name="robots" content="noindex">
     <title>Record Collection</title>
 </head>
 
