--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
             </div>
         </div>
         <div class="background" style="background-image:url(assets/img/background/img-73.jpg)"></div>
+        <!--
         <nav class="panel bottom">
             <div class="sections desktop">
                 <div class="left">
@@ -121,7 +122,7 @@
                     </ul>
                 </div>
             </div>
-        </nav>
+        </nav> -->
     </section>
     <!-- Games (#89) -->
     <section data-name="Beryllium" class="slide fade-3 kenBurns">
