--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
     <!-- Home (#82) -->
     <section data-name="Home" class="slide fade-6 kenBurns">
         <div class="content">
+            <!--
             <div class="light ae-3 fromTop" id="alert-box">
                 <p>R3ne.net is now Karkkainen.net!</p>
-              </div>  
+              </div>-->
             <div class="container">
                 <div class="wrap">
                     <div class="fix-6-12 noSelect">
