--- a/index.html
+++ b/index.html
@@ -207,13 +207,7 @@
                             <li class="col-6-12 fromBottomLeft">
                                 <h1 class="ae-2">Vinyl Record Collection Manager</h1>
                                 <div class="ae-3">
-                                    <p class="opacity-8">A command-line interface (CLI) program that allows easy access
-                                        and management of personal vinyl record collection. Utilizes the Discogs API to
-                                        retrieve information about records and allows search by query. User
-                                        can also use commands to perform actions such as viewing, sorting, deleting
-                                        records, and creating custom records. Convenient tool for vinyl collectors who
-                                        want to keep track of their collection and access information quickly and easily
-                                        from the command line.
+                                    <p class="opacity-8">Program to keep track of my vinyl record collection.
                                     </p>
                                 </div>
                                 <a href="./records/index.html" target="_blank"
