Random typewriter text

--- a/index.html
+++ b/index.html
@@ -56,12 +56,11 @@
                 <div class="wrap">
                     <div class="fix-6-12 noSelect">
                         <div class="fix-7-12 margin-top-2">
-                            <h1 class="ae-3 fronLeft">Rene Kärkkäinen</h1>
-                            <div class="light ae-3 fromrRight">
-                                <p class="opacity-8">I am a Finnish technology enthusiast who enjoys creating games,
-                                    software,
-                                    and other
-                                    cool projects.</p>
+                            <h1 class="ae-1 fronLeft">Rene Kärkkäinen</h1>
+                            <div class="typewriter">
+                                <div class="light ae-1 fromrRight">
+                                    <p id="typing-text" class="opacity-8"></p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -224,8 +223,8 @@
                                 <img src="assets/img/Screenshot-vinyldb-console.png" data-action="zoom"
                                     class="shadow rounded ae-8" alt="Image" />
                                 <br><br>
-                                <img src="assets/img/new-vinyl-site.png" data-action="zoom"
-                                    class="shadow rounded ae-8" alt="Image" />
+                                <img src="assets/img/new-vinyl-site.png" data-action="zoom" class="shadow rounded ae-8"
+                                    alt="Image" />
 
                             </li>
                             </li>
