--- a/test/index.html
+++ b/test/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="Refresh" content="0; url='https://karkkainen.net'" />
-  <title>Redirecting...</title>
+  <script src="index.js" type="text/javascript"></script>
 </head>
 <body>
   
