--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
               </div>-->
             <div class="container">
                 <div class="wrap">
-                    <div class="fix-6-12 noSelect">
+                    <div class="fix-6-12">
                         <div class="fix-7-12 margin-top-2">
                             <h1 class="ae-1 fronLeft">Rene Kärkkäinen</h1>
                             <div class="typewriter">
                                 <div class="light ae-1 fromrRight">
-                                    <p id="typing-text" class="opacity-8"></p>
+                                    <p id="typing-text" class="opacity-8">I am a Finnish technology student who enjoys creating games, software, and other cool projects.</p>
                                 </div>
                             </div>
                         </div>
