--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                             <h1 class="ae-1 fronLeft">Rene Kärkkäinen</h1>
                             <div class="typewriter">
                                 <div class="light ae-1 fromrRight">
-                                    <p id="typing-text" class="opacity-8">I am a Finnish technology student who enjoys creating games, software, and other cool projects.</p>
+                                    <p id="typing-text" class="opacity-8">I am a Finnish technology student who enjoys
+                                        creating games, software, and other cool projects.</p>
                                 </div>
                             </div>
                         </div>
@@ -242,65 +243,66 @@
             <div class="container">
                 <div class="wrap">
                     <div class="fix-9-12">
-                        <p class="hero ae-2"><span><a href="mailto:mail@r3ne.net">karkkainen@r3ne.net</a></span></p>
-                        <p class="hero ae-2" style="font-size: 12px;">PGP Key Fingerprint: a79e c442 3121 bf62 4a18 ea5d
-                            5ab6 a533 40d3 b4fc</p>
+                        <p class="hero ae-2"><span><a href="mailto:rene@karkkainen.net">rene@karkkainen.net</a></span>
+                        </p>
+                        <p class="hero ae-2" style="font-size: 12px;">PGP Key Fingerprint: e15b 9dfd b28f 4d68 11a5 5abc
+                            fdc9 7b8a 3972 3b0f</p>
                         <p class="hero ae-2">
                             <textarea readonly style="width: 70%; height: 150px; text-align: center; max-width: 100%;">
 -----BEGIN PGP PUBLIC KEY BLOCK-----
 
-xsFNBGQZ/4sBEADte+a4RzFA4X5t33S/wFwt/pfHIhV4JJtfoAyv2SiG9El/
-mErL085/+MwHRL8PNed34LnJPJZMer1dF5SSy2V21EjdjwcDvNFkdestnKuZ
-43ltMak024f90IdwEAy/X6ut79u8CZRl421yPembbz0V5bymtEIEcygCpBio
-yHHHczNHjUEIA448wjnLZzsygBmXZIu47XdtNqAbbiXd0Cz5DswBqBTEAdwI
-tneLxDA8jZxuvSyFR5iZSKeI0Z9RGVDTMReIDKDgJqZU2cYjVyWOA0fcUkrC
-qB19SbmLnBRRJminioaHwaKoxPAWVxmZuwp/8hmHHgBC7xqcCzJVoL37Jguj
-fz0tVhHbJIclXVxszilWQ20M6V5Ne6v2aweO6Z+si5RFoRtUYj+ZrTS1uwDh
-YmM7XwFaXmghSrocwtAFbZX9L6A1XTjhWpDshnOvN5KuuzEXOlSVoi7a0Mjp
-6XQF8BUnIiJv75vPhwNqQwXmpMi7g2t7xJZUUdleL2s7YpZMxq/6QBhQylFA
-iwpwyZPuklC9oxUuR9VpbZf0NB2/cz7brmjurNzsaVx8WGVltkwJZU3oql7v
-w43ORc7eu+Fohxfz5sSuk6Cc6xlmGx/4wBhKKF/04gbvZde5Mw20sysnyBIH
-5GDSvlvrRJLMT7cX+SUpjLSN3mLRih4N6iCgQQARAQABzSlrYXJra2FpbmVu
-QHIzbmUubmV0IDxrYXJra2FpbmVuQHIzbmUubmV0PsLBigQQAQgAPgUCZBn/
-iwQLCQcICRBatqUzQNO0/AMVCAoEFgACAQIZAQIbAwIeARYhBKeexEIxIb9i
-ShjqXVq2pTNA07T8AABFMA/+Io+cqkF83qCUPpLcVUJ2L1h6froN/4twYNIC
-2w39waYesW1xygRY2xEksfnmww4oJunk0ZAAum5cgMAt31B/bDxbaKYmPscm
-NRBgBqwwHRA7lOh66i2+xd7EyyJvKdioQE8Lr7rWAWswqQ84khGo3snun+KO
-fiFn18mOuqrnsaztF2R3f2ZRjp/gRJBPyW0KSIA72dE28JkIQNwrNyZc8uwA
-jgF7jdgzupxWK0kEj6WDlIQL3rJNaOamCkTpzCx1llS7N7x9EdB1qG35YCb+
-0qsQ0HSj64HNUWSw2BgTlA0St0htOutXwEZPLkI5n0DMv6UetulCWPxXS240
-V3msuNL6EtnmHmu4V5YG0jAcs+maRapOQMBcHORSGMRstXwLO6uQbzBJ46Rr
-zKQBxfD5dVPWzKiba7O+Bhfwfzqe+UpH03Vmhz7LOvnwki+eWK1gg4IIIe4u
-LH699RO+jWaLc771RSRRMqXbyM6AZVpo2ayC8BvJPT7QHE2EVmMjN2Dl5c8Y
-VX+WMivi5lTPHt3gKg6FHQsTK3XQ/Ax8uTUZPRmWNjMWF/UY7iXuERyPRHgY
-YLWPIO+MdfI6peygpyu9LjAx2cekKJMH1NPE5YUlRXrAGzfbENvPv/BakOOR
-sui5WCEGV5kq4xOg/fCGSo5zV6wJbofpid2yrKJn9DEuTujOwU0EZBn/iwEQ
-AKvutHlD2X5ef/wxv1dkI9tvYbtrT+1hkNJRycoE986Wgh2eiY2AbmepjlnU
-OwZC5aE7arEHOW/efYs+4HkkPo8zwzvR3FyH+1HZm4+fMjJRoh8zkQD13OP0
-q6AGHRqLknFEPpToGbzutIAKxWMfATYOKguh/S9Qot8iNTUvkOqmdoAo6MrT
-01OkS/GG2lmehO3ESrJMMUidpDuLfx8CVTJGCuqRU8rWJ1cUcEa4mmA9GBjB
-6g4QQLxsOA+1dZ4qxujgPWmC1Gaq/lf9Lk11s3T6WY6nvp5utyWS5WvfpHv8
-30W/ydZjFxhZajHjIEagTAcpxl2qxOv3pWBamrM7btNYTzLQqrN5bXziwM1D
-tnnOmDXOB+fs7Tn/VrKDByhoVMsE3o/7zm0+Uv1DAyREp0TQXEyhp9S0aEsB
-zFR7Iw8oFUWbDkDmplSsmipRah5LL1KehDy/XWpgdu6EvBTACjtWwoFNU+J9
-5U6vq/P9yzHFfh59XYYxZeptyOHxSgvOSTbWf9SQPyk6Ok6jYhMkmmJg4rI3
-0OuPGZ+1EG7xAXwMtqLsJm4j9I8A5EKrXto1oRur4aqtDgjiASBH821B0c5L
-qHouLh8Z4nVZRzom/Uu4URZndplSpl49+aeoYjg7jT3lQ6BPmPHHtdagjCHf
-jnxEgF5ZL28e7HHLQC2aqryBABEBAAHCwXYEGAEIACoFAmQZ/4sJEFq2pTNA
-07T8AhsMFiEEp57EQjEhv2JKGOpdWralM0DTtPwAAESeD/908qLfJW9LYbgp
-k+qGoQ93cILMgUbAHnuCWO/D3b6EVj04+7IYhX7zGm6+S7K/kcyj/HoB7jcI
-iIO25HfaKkQN2TjlVpg/TwEj4dvsmzkIfcTVd1A9l2wQms2ob/qmdxZj0lc1
-2GeobVZiEv4T0HrKwKdHBXZqSRG4JVcUOVQVGZS05Ke3wF1lkNDuX0EpR7A8
-6BtH5Uh0iNdkxTgvQ55slS/QE74x2z2WJyPmxx0qxRot68o2+XvHpmV08VOe
-yZ8uWVMr4NpT+7LJnaR9d1QJtKXW62qeUOZkCrNzrAQ0P6UNxwsVwvHLn8IO
-S9v9w9DpL9pSyXi0gS9y4dJv4TBnezoLSInGoA+rMk0B3hOI/SETljw0g226
-YXlzNo50LrLlpLNTMRTXFOooifZjBRbUWuakWeoyLkT3x2RhBdALVfJWmdtf
-z74wczLrV0aFDT2Xmgtr1ELlZMBYgXm5wHEs6CWXRlWwMzjL7SAl26KbP3Hs
-pUcp/93OrfnrJm4TLjwp8oOufneV8cg9QFGcEcKnz9NGzdmoOn+uPb6PjHws
-2z47tudJ2lmpHkmb7SdShpsuaOHbBlxHvLy78IVfkZyHAN2BUONeTlKKwMaI
-Nsjh0qgy/HJ2DgPw+F6rSZo1UDmXOvd2M80WErrWKoFa3b3JCC+Gfia3ybKB
-WDUC+QStJg==
-=DEMA
+xsFNBGUDSJwBEADE/0ym0N1HLIVcvVZCRygu4EiSqATOigOn/PsRvWBxonpJ
+Z6aVRs7Cxh41r6fCmKUU1En4ZAcR3XzqsGbn1x8H38L95pn8nfI2yQX77zdS
+e+3Id9ymBJphEJukzngByMKZUU5UYoXA98RcQgHPDN+3Qjfk1QLbB1cFxZvZ
+An85q8um0Hy1ndrFQ8qgqWl55LeivmrCHwIWbwtUCW5ieih3jNQn/Izg1l8T
+mydqTBJAZlG9XXF0PQNOXDTHI/OCGWg2KU8Iv3jLpLmHbcYFsQ6UCULXynu2
+fVWv1hE2uRLYtXEJtb1BMQTW0n+res3sz0f5xgX/fUAK5/JCZYUxKIxpJS67
+s5PWgPKumqaIuut9C9mU33n8SXqmjtfsImBNSsOyCUXt2z9P3WG/9QmhfqZU
+e1tpXuID77bU3lR8V1MrX/D79ytpGYX6UIVD51Rv3NDOTR+fDY1Lgtg+uE11
+AZdoKcpBl6LxEB1akv2l9BR8bRJQbCwVJ5weu4iDdpIhxmSmzsclFrV25vvF
+dumpqcNyHeFEGA65BO4hMxKR5Q1u2UL331111//0GNqHlzmQ+8/8AaFctVIC
+ZHKsnLvi9MhXNJngxGyRUDgcul8FpeqUo+CBIW2BBsc5UYVs2WvuuUJD14wU
+7nN+t5eqjv2gD2Q9EeoNr+k38zK/GqsEA6FQ+wARAQABzSlyZW5lQGthcmtr
+YWluZW4ubmV0IDxyZW5lQGthcmtrYWluZW4ubmV0PsLBigQQAQgAPgWCZQNI
+nAQLCQcICZD9yXuKOXI7DwMVCAoEFgACAQIZAQKbAwIeARYhBOFbnf2yj01o
+EaVavP3Je4o5cjsPAAAP0xAApT+JysthKumiWaB3258jQgi4n4oiHdFDCCFl
+W35IQPeN4nsGJ3aSX9L5TM3+OaAlkVNw3ckcUeGF3EsDtgZG5jYh+jeIgT3w
+WyhH1ExeNGCpY3drHa+ZC21tgubPF0oH+LyfewaYhg2OIlSH4Z/GK5zqKpI0
+wLITBsWvLzsa/bpJdySDY/DD73KU3r54vCZBVrJRZdWO6GdLx1dvIyWlZh0a
+xREyAf6cuL5/hbyE4w0x8CijZTQ4qBgiY12w6229aqf9fhm0bMtCPBZmqMpH
+bzythP0nyyYTfUY3aX9v707MNHs0s+gTG9lwlfU0DoVA8kzbqZLi2ZMqA5dX
+lyt1c3H+Jesc9Eef0KNNP+4+5S9IxXhJL7I01NeW7kLNudDm+ew2gmhJtcMV
+bmLDZi2Wuj8dnS3LxPtasYczGvzHNr8bP5Sq+aN/u2kzcmUJhRf3Uw3lQHok
+hv2dy9xLPCG6Mw5HQZ0jmz2NxBXDh7BjRWyTFwQq4M3KWsBaZJHYUptHBc8S
+S5la6gUt/oU2XrIJnYyl6Te0gmZakjLdoqFvJrE2RSzQgDxQUw6/H/9V9mUV
+aX2bUFVKKciq+EEV7rkPrbpf2KhQf5Gg3v9fVZPhs4BvACd82V+j43upiQ2V
+85sUOfETZQV33b3dYi/qA76bLOjgPnF1AeS55N92GsDObR/OwU0EZQNInAEQ
+AIZyGLscy38RK4Ee4xf87L3sE3lQDK5nJE54rRjWbMbU80EEre2ngRaU8REU
+obJ0Xfug0e28AmXlMVzkdj3BcVOY5QwVIyOKm9sZxhRzUATdC1k0WcVpXph8
+EICK6E7eZW9M99x4BTgOsO7VXoImFpzMypd+LP7JlraLHSDu3Mv51Pb1WqEM
+Ma48xfTTutPGF38/f5O4UYaOL3Vqb5O/iYNITZB26jLREbGpidUjPgyWfgZ4
+e7KE9HX1Qf9vkzR8s3nBGoK4i8D55rUEhYXdDXhHqzdLyhXnjpelHA5cY8wN
+dh62UloLXe3P4W9KE9FEk2VK89w2lO7Mlb/tNI0Vxhtf1Z+k361Z+6qqEK6Y
+mnSFwccoy4+5kVtafsZ/eo+gCHu6gW7fyR6gyaRW6HJh5llX9lBb46UdrnoG
+KJxiDagkM6zA3jaWcgFgN84+DDI25dkXhDgv8wd8ykNPZszKaaG/BAp102Gp
+OE++JwRe0AZ189pTCCetS4EE2dg1r8zORGw3R3jDeeAougiveATSHybrDNP6
+VBgElPAYI/zvsmH091Fp3ulM0XCwqqgzCL9XiIrP9FPXn9WLZrUKmPlwkHsU
+9WOc1nnnJRtPnor26iKjndpkzwKv8YNflWIa0MPY2DjDk6OVhEth4arhtPnc
+imowytmZ3PsvYVEv1tzm6LbdABEBAAHCwXYEGAEIACoFgmUDSJwJkP3Je4o5
+cjsPApsMFiEE4Vud/bKPTWgRpVq8/cl7ijlyOw8AAMyFEAC2AW4ilEVQWI64
+ovCA0FkFlQhGpPh01p62UNXz1a36Dk823r+TzlGmLzsTzkiK+4xWAayYt9lY
+dk+Buo9KigGS3d7nLeZXy23SPuQO5VFkVTa9wsU3pSo2lV8d4/s0gSADw2No
+Sg6DovtAbu8HyQIhks5yr3CDP9E9qg25FvCrwSpQAMXOw0+trcn+FRZl3+gP
+b+XvSe6JzJADgqkMHYn02fPtFiOB0FTN9ycVZjtkBtL3ikjfnNk2YhVd4jj2
+8S9cyx44XkW2rFfjIjcO1yB0aRwGSwq2GdlDwkE5zux6cgbTjigtLTrmZD/x
+rXP+DK/abfkIxSxtwQgzcEpqjMhlRAvDy84/qiRjrEruLPYpsJdZ4O0oj+b2
+n4M/qAtY8TO1jXmzQe73HJ32eR8qVv9dDNz6ne2VOtYec9skXjLhMsZhjdie
+K2S0NMFLjYwxUEmHl62JEPh4B0EzjFtw7RVkVlBSHz3TZlubYM1uhkWl2KrY
+ax+rKgaMRqKFQ0LV8OZDlpR3YLFCTPcAf45eW7Am1dSpsULM8HQeFzrPsF9k
+PRlOuJsvmhTRXYaa4QE0es5WUWXpzcMoB6ib0rzhAyR40ahC91CFMDOTnw14
+dRiDnrMJGNYx5N+vGiytYjc8RqGdD3Qm0tJpDXTUL82dHI70OctKdDbh4tSj
+4wjNbzGLRA==
+=PKn4
 -----END PGP PUBLIC KEY BLOCK-----</textarea>
                         </p>
                     </div>
