--- a/index.html
+++ b/index.html
@@ -315,6 +315,10 @@ dRiDnrMJGNYx5N+vGiytYjc8RqGdD3Qm0tJpDXTUL82dHI70OctKdDbh4tSj
                         <a href="https://github.com/JAAKKQ" target="_blank" class="button hollow ae-5"><img
                                 src="assets/img/GitHub_Logo_White.png" height="63" /></a>
                     </div>
+                    <div class="fix-9-12">
+                        <a href="https://twitter.com/karkkainen_net" target="_blank" class="button hollow ae-5"><img
+                                src="assets/img/x-logo-white.png" height="63" /></a>
+                    </div>
                 </div>
             </div>
         </div>
