--- a/projects/index.html
+++ b/projects/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="assets/img/pepe.jpeg" type="image/gif" sizes="16x16">
-    <title>R3ne's Project List</title>
+    <title>Rene's Project List</title>
     <meta name="title" content="R3ne's Projects">
     <meta name="description" content="Detailed documentations of my projects">
     <meta name="robots" content="index">
