--- a/index.html
+++ b/index.html
@@ -245,8 +245,7 @@
                     <div class="fix-9-12">
                         <p class="hero ae-2"><span><a href="mailto:rene@karkkainen.net">rene@karkkainen.net</a></span>
                         </p>
-                        <p class="hero ae-2" style="font-size: 12px;">PGP Key Fingerprint: e15b 9dfd b28f 4d68 11a5 5abc
-                            fdc9 7b8a 3972 3b0f</p>
+                        <p class="hero ae-2" style="font-size: 12px;">PGP Key Fingerprint: E15B 9DFD B28F 4D68 11A5 5ABC FDC9 7B8A 3972 3B0F</p>
                         <p class="hero ae-2">
                             <textarea readonly style="width: 70%; height: 150px; text-align: center; max-width: 100%;">
 -----BEGIN PGP PUBLIC KEY BLOCK-----
