--- a/servers/index.html
+++ b/servers/index.html
@@ -45,7 +45,7 @@
             var items = document.getElementsByClassName("menu-item");
             for (var i = 0; i < items.length; i++) {
                 var url = items[i].getElementsByTagName("a")[0].href;
-                if (url.includes('r3ne.net')) { // skip if url contains 'r3ne.net'
+                if (url.includes('karkkainen.net')) { // skip if url contains 'karkkainen.net'
                     items[i].style.display = "block";
                     continue;
                 }
@@ -69,10 +69,10 @@
         <div class="header menu-opened">
             <p class="vpn" style="color: white; text-align: center;">No VPN connection!</p>
             <ul class="menu">
-                <li class="menu-item"><a href="https://r3ne.net" target="_blank">Website</a></li>
-                <li class="menu-item" style="display:none"><a href="https://cloud.r3ne.net" target="_blank">Cloud</a></li>
-                <li class="menu-item" style="display:none"><a href="https://r3ne.net/records/" target="_blank">Records</a></li>
-                <li class="menu-item" style="display:none"><a href="https://r3ne.net/projects/" target="_blank">Projects</a></li>
+                <li class="menu-item"><a href="https://karkkainen.net" target="_blank">Website</a></li>
+                <li class="menu-item" style="display:none"><a href="https://cloud.karkkainen.net" target="_blank">Cloud</a></li>
+                <li class="menu-item" style="display:none"><a href="https://karkkainen.net/records/" target="_blank">Records</a></li>
+                <li class="menu-item" style="display:none"><a href="https://karkkainen.net/projects/" target="_blank">Projects</a></li>
                 <br><br>
                 <li class="menu-item"><a href="./index.html" style="font-size: 15px; display: contents;">Refresh</a></li>
                 <li class="menu-item" style="display:none"><a href="https://192.168.1.5" target="_blank">VmWare</a></li>
