--- a/servers/index.html
+++ b/servers/index.html
@@ -70,7 +70,7 @@
             <p class="vpn" style="color: white; text-align: center;">No VPN connection!</p>
             <ul class="menu">
                 <li class="menu-item"><a href="https://karkkainen.net" target="_blank">Website</a></li>
-                <li class="menu-item" style="display:none"><a href="https://cloud.karkkainen.net" target="_blank">Cloud</a></li>
+                <li class="menu-item" style="display:none"><a href="https://cloud.r3ne.net" target="_blank">Cloud</a></li>
                 <li class="menu-item" style="display:none"><a href="https://karkkainen.net/records/" target="_blank">Records</a></li>
                 <li class="menu-item" style="display:none"><a href="https://karkkainen.net/projects/" target="_blank">Projects</a></li>
                 <br><br>
