--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <link rel="icon" href="assets/icon/favicon.ico" type="image/gif" sizes="16x16">
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.1.1/model-viewer.min.js"></script>
-    <meta name="title" content="R3ne.net">
+    <meta http-equiv="onion-location" content="http://jzouxchglh4eawjv4jlreojtei4igioho4b3gah6iqyrrsotcdyfi3id.onion" />
+    <meta name="title" content="Rene Kärkkäinen | Portfolio">
     <meta name="description"
         content="I am a technology enthusiast who enjoys creating games, software, and other cool projects.">
     <meta name="robots" content="index">
