Faster writing speed on Home page

--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <link rel="icon" href="assets/icon/favicon.ico" type="image/gif" sizes="16x16">
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.1.1/model-viewer.min.js"></script>
-    <meta http-equiv="onion-location" content="http://jzouxchglh4eawjv4jlreojtei4igioho4b3gah6iqyrrsotcdyfi3id.onion" />
     <meta name="title" content="Rene Kärkkäinen | Portfolio">
-    <meta name="description"
-        content="I am a technology enthusiast who enjoys creating games, software, and other cool projects.">
+    <meta name="description" content="I am a technology enthusiast who enjoys creating games, software, and other cool projects.">
     <meta name="robots" content="index">
     <meta name="keywords" content="rene, r3ne, karkkainen" />
 
@@ -55,8 +53,8 @@
               </div>-->
             <div class="container">
                 <div class="wrap">
-                    <div class="fix-6-12">
-                        <div class="fix-7-12 margin-top-2">
+                    <div class="fix-8-12">
+                        <div class="fix-12-12 margin-top-2">
                             <h1 class="ae-1 fronLeft">Rene Kärkkäinen</h1>
                             <div class="typewriter">
                                 <div class="light ae-1 fromrRight">
