--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="icon" href="assets/icon/favicon.ico" type="image/gif" sizes="16x16">
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.1.1/model-viewer.min.js"></script>
     <meta name="title" content="Rene Kärkkäinen | Portfolio">
-    <meta name="description" content="I am a technology enthusiast who enjoys creating games, software, and other cool projects.">
+    <meta name="description"
+        content="I am a technology enthusiast who enjoys creating games, software, and other cool projects.">
     <meta name="robots" content="index">
     <meta name="keywords" content="rene, r3ne, karkkainen" />
 
@@ -71,7 +72,7 @@
         <div class="background" style="background-image: url(assets/img/background/hacker-background.gif)"></div>
     </section>
 
-    <!-- Discord Bot (#73) -->
+    <!-- Exchange (#73) -->
     <section data-name="exchange" class="slide fade-6 kenBurns">
         <div class="content">
             <div class="container">
@@ -82,30 +83,26 @@
                                 fetch("stats.json")
                                     .then(response => response.json())
                                     .then(data => {
-                                        document.querySelector('#BotDynDescription').innerHTML = "Currently serving " + data.serverCount + " Discord servers with " + data.memberCount + " users in total."
+                                        //document.querySelector('#BotDynDescription').innerHTML = "Currently serving " + data.serverCount + " Discord servers with " + data.memberCount + " users in total."
                                     })
                             </script>
                             <li class="col-6-30 left box-73">
-                                <h1 class="ae-2">Cryptocurrency exchange for learning</h1>
+                                <h1 class="ae-2">Cryptocurrency exchange</h1>
                                 <p class="ae-3"><span class="opacity-8"></span>Created a cryptocurrency exchange where
                                     user uses fake money to buy cryptocurrencies and learn about them. First
                                     wrote in JavaScript, later wanted to learn Python so I
                                     rewrote it in Python. The interface can be integrated easily to websites but I have
                                     created a Discord bot to attract the younger people.
                                 </p>
-                                <p class="ae-4"><span id="BotDynDescription" class="opacity-8">Currently serving 0
-                                        Discord servers with 0 users in total.</span></p>
                                 <a href="https://discord.com/api/oauth2/authorize?client_id=940968101627969598&permissions=277025410048&scope=bot%20applications.commands"
-                                    target="_blank" class="button blue gradient cropBottom ae-7 fromCenter"><i
+                                    target="_blank" class="button social-behance cropBottom ae-7 fromCenter"><i
                                         class="material-icons small">add_box</i>Invite Bot</a>
                                 <a href="https://top.gg/bot/940968101627969598" target="_blank"
-                                    class="button blue gradient cropBottom ae-7 fromCenter"><i
+                                    class="button social-behance cropBottom ae-7 fromCenter"><i
                                         class="material-icons small">add_box</i>Top.gg</a>
                                 <a href="https://github.com/JAAKKQ/pyexhange" target="_blank"
-                                    class="button blue gradient cropBottom ae-7 fromCenter"><i
+                                    class="button social-behance cropBottom ae-7 fromCenter"><i
                                         class="material-icons small">cloud_download</i>Source</a>
-                            </li>
-                            <li class="col-6-12 right ae-1 fromAbove">
                             </li>
                         </ul>
                     </div>
@@ -135,12 +132,10 @@
                             <li class="col-6-12 fromBottomLeft">
                                 <h1 class="ae-2">Beryllium</h1>
                                 <div class="ae-3">
-                                    <p class="opacity-8">Beryllium is a thrilling multiplayer game where players take on
-                                        the roles of opposing forces. One group aims to achieve certain objectives,
-                                        while the other works to prevent them. The objectives involve strategic actions
-                                        like planting or defusing items, and success can also come from outmaneuvering
-                                        the opposing team. The game offers an exciting mix of teamwork and strategy in a
-                                        competitive environment.</p>
+                                    <p class="opacity-8">Beryllium is a multiplayer game of strategy and teamwork.
+                                        Players are either attackers or defenders, and they must complete or stop
+                                        objectives like planting or defusing items. The game is competitive and
+                                        thrilling.</p>
                                     <p class="opacity-8">Wanted to learn about Unreal Engine and making games in
                                         general.</p>
                                 </div>
@@ -180,7 +175,7 @@
                                     </p>
                                 </div>
                                 <a href="projects/open.html?project=PP-215" target="_blank"
-                                    class="button blue gradient cropBottom ae-7 fromCenter"><i
+                                    class="button social-behance  cropBottom ae-7 fromCenter"><i
                                         class="material-icons small">open_in_new</i>Learn More</a>
                             </li>
                             <li class="col-1-12">&nbsp;</li>
@@ -210,13 +205,13 @@
                                     </p>
                                 </div>
                                 <a href="./records/index.html" target="_blank"
-                                    class="button blue gradient cropBottom ae-7 fromCenter"><i
+                                    class="button social-behance  cropBottom ae-7 fromCenter"><i
                                         class="material-icons small">playlist_play</i>Demo</a>
                                 <a href="https://github.com/JAAKKQ/Vinyl-Manager/" target="_blank"
-                                    class="button blue gradient cropBottom ae-7 fromCenter"><i
+                                    class="button social-behance  cropBottom ae-7 fromCenter"><i
                                         class="material-icons small">cloud_download</i>Source</a>
                                 <a href="projects/open.html?project=Vinyl-Manager" target="_blank"
-                                    class="button blue gradient cropBottom ae-7 fromCenter"><i
+                                    class="button social-behance  cropBottom ae-7 fromCenter"><i
                                         class="material-icons small">open_in_new</i>Learn More</a>
                             <li class="col-1-12">&nbsp;</li>
                             <li class="col-5-12 bottom">
@@ -244,7 +239,8 @@
                     <div class="fix-9-12">
                         <p class="hero ae-2"><span><a href="mailto:rene@karkkainen.net">rene@karkkainen.net</a></span>
                         </p>
-                        <p class="hero ae-2" style="font-size: 12px;">PGP Key Fingerprint: E15B 9DFD B28F 4D68 11A5 5ABC FDC9 7B8A 3972 3B0F</p>
+                        <p class="hero ae-2" style="font-size: 12px;">PGP Key Fingerprint: E15B 9DFD B28F 4D68 11A5 5ABC
+                            FDC9 7B8A 3972 3B0F</p>
                         <p class="hero ae-2">
                             <textarea readonly style="width: 70%; height: 150px; text-align: center; max-width: 100%;">
 -----BEGIN PGP PUBLIC KEY BLOCK-----
