--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
                                 <div class="light ae-1 fromrRight">
                                     <p id="typing-text" class="opacity-8">I am a Finnish technology student who enjoys
                                         creating games, software, and other cool projects.</p>
+                                    <a href="#contact" class="button social-behance cropBottom ae-7 fromCenter"><i
+                                            class="material-icons small">mail</i>Contact</a>
                                 </div>
                             </div>
                         </div>
