--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <link rel="icon" href="assets/icon/favicon.ico" type="image/gif" sizes="16x16">
-    <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.1.1/model-viewer.min.js"></script>
     <meta name="title" content="Rene Kärkkäinen | Portfolio">
     <meta name="description"
         content="I am a technology enthusiast who enjoys creating games, software, and other cool projects.">
@@ -32,8 +31,8 @@
     <!-- <script src="js/custom.js" type="text/javascript"></script> -->
 
     <!-- Fonts and Material Icons -->
-    <link rel="stylesheet" as="font"
-        href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,600,700|Material+Icons" />
+    <link rel="stylesheet" as="font" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,600,700" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body class="slides chain simplifiedMobile animated">
@@ -61,8 +60,8 @@
                                 <div class="light ae-1 fromrRight">
                                     <p id="typing-text" class="opacity-8">I am a Finnish technology student who enjoys
                                         creating games, software, and other cool projects.</p>
-                                    <a href="#contact" class="button social-behance cropBottom ae-7 fromCenter"><i
-                                            class="material-icons small">mail</i>Contact</a>
+                                    <a href="#contact" class="button social-behance cropBottom ae-7 fromCenter"><i class="fa fa-envelope-o" aria-hidden="true"></i>
+                                        Contact</a>
                                 </div>
                             </div>
                         </div>
@@ -97,14 +96,14 @@
                                     created a Discord bot to attract the younger people.
                                 </p>
                                 <a href="https://discord.com/api/oauth2/authorize?client_id=940968101627969598&permissions=277025410048&scope=bot%20applications.commands"
-                                    target="_blank" class="button social-behance cropBottom ae-7 fromCenter"><i
-                                        class="material-icons small">add_box</i>Invite Bot</a>
+                                    target="_blank" class="button social-behance cropBottom ae-7 fromCenter"><i class="fa fa-plus-square-o" aria-hidden="true"></i>
+                                    Invite Bot</a>
                                 <a href="https://top.gg/bot/940968101627969598" target="_blank"
-                                    class="button social-behance cropBottom ae-7 fromCenter"><i
-                                        class="material-icons small">add_box</i>Top.gg</a>
+                                    class="button social-behance cropBottom ae-7 fromCenter"><i class="fa fa-plus-square-o" aria-hidden="true"></i>
+                                    Top.gg</a>
                                 <a href="https://github.com/JAAKKQ/pyexhange" target="_blank"
-                                    class="button social-behance cropBottom ae-7 fromCenter"><i
-                                        class="material-icons small">cloud_download</i>Source</a>
+                                    class="button social-behance cropBottom ae-7 fromCenter"><i class="fa fa-download" aria-hidden="true"></i>
+                                    Source</a>
                             </li>
                         </ul>
                     </div>
@@ -177,8 +176,8 @@
                                     </p>
                                 </div>
                                 <a href="projects/open.html?project=PP-215" target="_blank"
-                                    class="button social-behance  cropBottom ae-7 fromCenter"><i
-                                        class="material-icons small">open_in_new</i>Learn More</a>
+                                    class="button social-behance  cropBottom ae-7 fromCenter"><i class="fa fa-external-link" aria-hidden="true"></i>
+                                    Learn More</a>
                             </li>
                             <li class="col-1-12">&nbsp;</li>
                             <li class="col-5-12 bottom">
@@ -207,14 +206,12 @@
                                     </p>
                                 </div>
                                 <a href="./records/index.html" target="_blank"
-                                    class="button social-behance  cropBottom ae-7 fromCenter"><i
-                                        class="material-icons small">playlist_play</i>Demo</a>
+                                    class="button social-behance  cropBottom ae-7 fromCenter"><i class="fa fa-external-link" aria-hidden="true"></i> Demo</a>
                                 <a href="https://github.com/JAAKKQ/Vinyl-Manager/" target="_blank"
-                                    class="button social-behance  cropBottom ae-7 fromCenter"><i
-                                        class="material-icons small">cloud_download</i>Source</a>
+                                    class="button social-behance  cropBottom ae-7 fromCenter"><i class="fa fa-download" aria-hidden="true"></i>
+                                    Source</a>
                                 <a href="projects/open.html?project=Vinyl-Manager" target="_blank"
-                                    class="button social-behance  cropBottom ae-7 fromCenter"><i
-                                        class="material-icons small">open_in_new</i>Learn More</a>
+                                    class="button social-behance  cropBottom ae-7 fromCenter"><i class="fa fa-external-link" aria-hidden="true"></i> Learn More</a>
                             <li class="col-1-12">&nbsp;</li>
                             <li class="col-5-12 bottom">
                                 <img src="assets/img/Screenshot-vinyldb-console.png" data-action="zoom"
