--- a/servers/index.html
+++ b/servers/index.html
@@ -76,13 +76,10 @@
                 <br><br>
                 <li class="menu-item"><a href="./index.html" style="font-size: 15px; display: contents;">Refresh</a></li>
                 <div class="servers">
-                    <li class="menu-item" style="display:none"><a href="https://192.168.1.5" target="_blank">VmWare</a></li>
-                    <li class="menu-item" style="display:none"><a href="http://192.168.1.1" target="_blank">PfSense</a></li>
-                    <li class="menu-item" style="display:none"><a href="https://192.168.1.1:3000" target="_blank">Monitor Traffic</a></li>
-                    <li class="menu-item" style="display:none"><a href="https://192.168.10.6:9090"target="_blank">Locamente</a></li>
-                    <li class="menu-item" style="display:none"><a href="https://192.168.10.8" target="_blank">Wazuh</a></li>
-                    <li class="menu-item" style="display:none"><a href="https://192.168.10.10" target="_blank">TrueNAS</a></li>
-                    <li class="menu-item" style="display:none"><a href="https://192.168.10.10:8283" target="_blank">Nextcloud</a></li>
+                    <li class="menu-item" style="display:none"><a href="https://vmware.local" target="_blank">VmWare</a></li>
+                    <li class="menu-item" style="display:none"><a href="http://pfsense.local" target="_blank">PfSense</a></li>
+                    <li class="menu-item" style="display:none"><a href="https://locamente.local"target="_blank">Locamente</a></li>
+                    <li class="menu-item" style="display:none"><a href="https://truenas.local" target="_blank">TrueNAS</a></li>
                 </div>
             </ul>
         </div>
