--- a/servers/index.html
+++ b/servers/index.html
@@ -77,7 +77,7 @@
                 <li class="menu-item"><a href="./index.html" style="font-size: 15px; display: contents;">Refresh</a></li>
                 <div class="servers">
                     <li class="menu-item" style="display:none"><a href="https://vmware.local" target="_blank">VmWare</a></li>
-                    <li class="menu-item" style="display:none"><a href="https://pfsense.local" target="_blank">PfSense</a></li>
+                    <li class="menu-item" style="display:none"><a href="https://pfsense.arpa" target="_blank">PfSense</a></li>
                     <li class="menu-item" style="display:none"><a href="https://locamente.local"target="_blank">Locamente</a></li>
                     <li class="menu-item" style="display:none"><a href="https://truenas.local" target="_blank">TrueNAS</a></li>
                 </div>
