Removed pinging displaying

--- a/servers/index.html
+++ b/servers/index.html
@@ -70,16 +70,16 @@
             <p class="vpn" style="color: white; text-align: center;">No VPN connection!</p>
             <ul class="menu">
                 <li class="menu-item"><a href="https://karkkainen.net" target="_blank">Website</a></li>
-                <li class="menu-item" style="display:none"><a href="https://cloud.karkkainen.net" target="_blank">Cloud</a></li>
-                <li class="menu-item" style="display:none"><a href="https://karkkainen.net/records/" target="_blank">Records</a></li>
-                <li class="menu-item" style="display:none"><a href="https://karkkainen.net/projects/" target="_blank">Projects</a></li>
+                <li class="menu-item"><a href="https://cloud.karkkainen.net" target="_blank">Cloud</a></li>
+                <li class="menu-item"><a href="https://karkkainen.net/records/" target="_blank">Records</a></li>
+                <li class="menu-item"><a href="https://karkkainen.net/projects/" target="_blank">Projects</a></li>
                 <br><br>
-                <li class="menu-item"><a href="./index.html" style="font-size: 15px; display: contents;">Refresh</a></li>
+                <li class="menu-item"><a href="./index.html" style="font-size: 15px; display: contents;">Servers</a></li>
                 <div class="servers">
-                    <li class="menu-item" style="display:none"><a href="https://vmware.local" target="_blank">VmWare</a></li>
-                    <li class="menu-item" style="display:none"><a href="https://pfsense.arpa" target="_blank">PfSense</a></li>
-                    <li class="menu-item" style="display:none"><a href="https://locamente.local"target="_blank">Locamente</a></li>
-                    <li class="menu-item" style="display:none"><a href="https://truenas.local" target="_blank">TrueNAS</a></li>
+                    <li class="menu-item"><a href="https://vmware.local" target="_blank">VmWare</a></li>
+                    <li class="menu-item"><a href="https://pfsense.arpa" target="_blank">PfSense</a></li>
+                    <li class="menu-item"><a href="https://locamente.local"target="_blank">Locamente</a></li>
+                    <li class="menu-item"><a href="https://truenas.local" target="_blank">TrueNAS</a></li>
                 </div>
             </ul>
         </div>
