--- a/down/index.html
+++ b/down/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="rene, r3ne" />
 
     <!-- Page Title -->
-    <title>All Services Down For Now!</title>
+    <title>Certain services may be unavailable!</title>
 
     <!-- Compressed Styles -->
     <link href="css/slides.min.css" rel="stylesheet" type="text/css">
@@ -27,15 +27,6 @@
     <!-- Fonts and Material Icons -->
     <link rel="stylesheet" as="font"
         href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,600,700|Material+Icons" />
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6DMDXB08ZY"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'G-6DMDXB08ZY');
-    </script>
 
 </head>
 
@@ -56,22 +47,11 @@
                     <div class="fix-10-12 noSelect">
                         <div class="fix-9-12">
                             <div class="light ae-6 fromrRight">
-                                <p>Hello, my fellow Americans. I'm sorry to say that the server and all services will be
-                                    down for the rest of the week. And let me tell you, it's not my fault, believe me.
-                                </p>
-                                <p>It's those darn hackers, folks. They're constantly trying to attack our great
-                                    American servers, but don't worry, we're going to make them pay. We're going to
-                                    build a wall around our servers, and Mexico is going to pay for it.</p>
-                                <p>But in the meantime, we have to take our server offline to make sure those hackers
-                                    can't do any more damage. And let me tell you, it's going to be huge. The biggest
-                                    shutdown you've ever seen, folks. It's going to be yuge.</p>
-                                <p>But don't worry, we've got the best team of experts working on this. They're going to
-                                    make sure our server is back online and running better than ever. And when it comes
-                                    back online, let me tell you, it's going to be fantastic. It's going to be
-                                    tremendous.</p>
-                                <p>So please, bear with us for the rest of the week. And remember, we're doing this for
-                                    the good of our great American server. And together, we're going to make America
-                                    great again. Thank you, and God bless America.</p>
+                                <p>Hey there, incredible users from all around the world. Gotta tell ya, unfortunately, the server and all its amazing services are gonna be down for the week. And let me be very clear, it's not my fault – believe me.</p>
+                                <p>We got these hackers, folks. Nasty characters from all over, constantly trying to mess with our fantastic global servers. But don't worry, we're gonna deal with 'em. We're gonna build a digital wall around our servers, and someone else is gonna pick up the tab for it, mark my words.</p>
+                                <p>For the time being, we gotta take a timeout, bring the server offline. Gotta do it big, the biggest shutdown you've ever seen. It's gonna be tremendous, absolutely tremendous.</p>
+                                <p>But listen, we've got the best team, folks. Top-notch experts working on this, they're gonna make the server great again. When it comes back online, it's gonna be fantastic, believe me.</p>
+                                <p>So bear with us for the week. We're doing this for the good of our incredible global server. Together, we're gonna make our digital world great again. Thank you, and God bless our online community.</p>                                
                             </div>
                         </div>
                     </div>
