--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
     <!-- Home (#82) -->
     <section data-name="Home" class="slide fade-6 kenBurns">
         <div class="content">
-            <!--
+
             <div class="light ae-3 fromTop" id="alert-box">
-                <p>R3ne.net is now Karkkainen.net!</p>
-              </div>-->
+                <p>Due to server maintenance, certain services may be unavailable. <a href="./down/index.html"><u>Learn More!</u></a></p>
+            </div>
             <div class="container">
                 <div class="wrap">
                     <div class="fix-8-12">
