--- a/down/index.html
+++ b/down/index.html
@@ -47,11 +47,11 @@
                     <div class="fix-10-12 noSelect">
                         <div class="fix-9-12">
                             <div class="light ae-6 fromrRight">
-                                <p>Hey there, incredible users from all around the world. Gotta tell ya, unfortunately, the server and all its amazing services are gonna be down for the week. And let me be very clear, it's not my fault – believe me.</p>
+                                <p>Hey there, incredible visitors from all around the world. Gotta tell ya, unfortunately, the server and all its amazing services are gonna be down for the week. And let me be very clear, it's not my fault – believe me.</p>
                                 <p>We got these hackers, folks. Nasty characters from all over, constantly trying to mess with our fantastic global servers. But don't worry, we're gonna deal with 'em. We're gonna build a digital wall around our servers, and someone else is gonna pick up the tab for it, mark my words.</p>
                                 <p>For the time being, we gotta take a timeout, bring the server offline. Gotta do it big, the biggest shutdown you've ever seen. It's gonna be tremendous, absolutely tremendous.</p>
                                 <p>But listen, we've got the best team, folks. Top-notch experts working on this, they're gonna make the server great again. When it comes back online, it's gonna be fantastic, believe me.</p>
-                                <p>So bear with us for the week. We're doing this for the good of our incredible global server. Together, we're gonna make our digital world great again. Thank you, and God bless our online community.</p>                                
+                                <p>So bear with us for the week. We're doing this for the good of our incredible global server. Together, we're gonna make our digital world great again.</p>                                
                             </div>
                         </div>
                     </div>
