--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="content">
 
             <div class="light ae-3 fromTop" id="alert-box">
-                <p>Due to server maintenance, certain services may be unavailable. <a href="./down/index.html"><u>Learn More!</u></a></p>
+                <p>Due to server maintenance, certain services may be unavailable until 4th of December.</p>
             </div>
             <div class="container">
                 <div class="wrap">
