--- a/index.html
+++ b/index.html
@@ -48,18 +48,17 @@
     <section data-name="Home" class="slide fade-6 kenBurns">
         <div class="content">
 
-            <div class="light ae-3 fromTop" id="alert-box">
-                <p>Due to server maintenance, certain services may be unavailable until 4th of December.</p>
-            </div>
+            <!--<div class="light ae-3 fromTop" id="alert-box">
+                <p></p>
+            </div>-->
             <div class="container">
                 <div class="wrap">
-                    <div class="fix-8-12">
-                        <div class="fix-12-12 margin-top-2">
+                    <div class="fix-12-12">
+                        <div class="fix-10-12 margin-top-2">
                             <h1 class="ae-1 fronLeft">Rene Kärkkäinen</h1>
                             <div class="typewriter">
                                 <div class="light ae-1 fromrRight">
-                                    <p id="typing-text" class="opacity-8">I am a Finnish technology student who enjoys
-                                        creating games, software, and other cool projects.</p>
+                                    <p id="typing-text" class="opacity-8"></p>
                                     <a href="#contact" class="button social-behance cropBottom ae-7 fromCenter"><i class="fa fa-envelope-o" aria-hidden="true"></i>
                                         Contact</a>
                                 </div>
