PGP Relocation and updated CV page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="assets/icon/favicon.ico" type="image/gif" sizes="16x16">
     <meta name="title" content="Rene Kärkkäinen | Portfolio">
     <meta name="description"
-        content="I am a technology enthusiast who enjoys creating games, software, and other cool projects.">
+        content="Finnish technology student at Business College Helsinki, with a background at WithSecure (formerly F-Secure), a leading Nordic cyber security company. Skilled in networking, cyber security, web development, and data analysis. Actively seeking opportunities in IT to contribute in enhancing system security.">
     <meta name="robots" content="index">
     <meta name="keywords" content="rene, r3ne, karkkainen" />
 
@@ -110,16 +110,6 @@
             </div>
         </div>
         <div class="background" style="background-image:url(assets/img/background/img-73.jpg)"></div>
-        <!--
-        <nav class="panel bottom">
-            <div class="sections desktop">
-                <div class="left">
-                    <ul class="menu uppercase">
-                        <li><a class="light ae-6 fromBottom" href="./DiscordBot/index.html" target="_blank">View Legal Documents</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav> -->
     </section>
     <!-- Games (#89) -->
     <section data-name="Beryllium" class="slide fade-3 kenBurns">
@@ -234,87 +224,38 @@
         <div class="content">
             <div class="container">
                 <div class="wrap">
+                    <div class="fix-12-12">
+                        <h1 class="ae-2">CONTACT</h1>
+                    </div>
                     <div class="fix-9-12">
                         <p class="hero ae-2"><span><a href="mailto:rene@karkkainen.net">rene@karkkainen.net</a></span>
                         </p>
-                        <p class="hero ae-2" style="font-size: 12px;">PGP Key Fingerprint: E15B 9DFD B28F 4D68 11A5 5ABC
-                            FDC9 7B8A 3972 3B0F</p>
-                        <p class="hero ae-2">
-                            <textarea readonly style="width: 70%; height: 150px; text-align: center; max-width: 100%;">
------BEGIN PGP PUBLIC KEY BLOCK-----
-
-xsFNBGUDSJwBEADE/0ym0N1HLIVcvVZCRygu4EiSqATOigOn/PsRvWBxonpJ
-Z6aVRs7Cxh41r6fCmKUU1En4ZAcR3XzqsGbn1x8H38L95pn8nfI2yQX77zdS
-e+3Id9ymBJphEJukzngByMKZUU5UYoXA98RcQgHPDN+3Qjfk1QLbB1cFxZvZ
-An85q8um0Hy1ndrFQ8qgqWl55LeivmrCHwIWbwtUCW5ieih3jNQn/Izg1l8T
-mydqTBJAZlG9XXF0PQNOXDTHI/OCGWg2KU8Iv3jLpLmHbcYFsQ6UCULXynu2
-fVWv1hE2uRLYtXEJtb1BMQTW0n+res3sz0f5xgX/fUAK5/JCZYUxKIxpJS67
-s5PWgPKumqaIuut9C9mU33n8SXqmjtfsImBNSsOyCUXt2z9P3WG/9QmhfqZU
-e1tpXuID77bU3lR8V1MrX/D79ytpGYX6UIVD51Rv3NDOTR+fDY1Lgtg+uE11
-AZdoKcpBl6LxEB1akv2l9BR8bRJQbCwVJ5weu4iDdpIhxmSmzsclFrV25vvF
-dumpqcNyHeFEGA65BO4hMxKR5Q1u2UL331111//0GNqHlzmQ+8/8AaFctVIC
-ZHKsnLvi9MhXNJngxGyRUDgcul8FpeqUo+CBIW2BBsc5UYVs2WvuuUJD14wU
-7nN+t5eqjv2gD2Q9EeoNr+k38zK/GqsEA6FQ+wARAQABzSlyZW5lQGthcmtr
-YWluZW4ubmV0IDxyZW5lQGthcmtrYWluZW4ubmV0PsLBigQQAQgAPgWCZQNI
-nAQLCQcICZD9yXuKOXI7DwMVCAoEFgACAQIZAQKbAwIeARYhBOFbnf2yj01o
-EaVavP3Je4o5cjsPAAAP0xAApT+JysthKumiWaB3258jQgi4n4oiHdFDCCFl
-W35IQPeN4nsGJ3aSX9L5TM3+OaAlkVNw3ckcUeGF3EsDtgZG5jYh+jeIgT3w
-WyhH1ExeNGCpY3drHa+ZC21tgubPF0oH+LyfewaYhg2OIlSH4Z/GK5zqKpI0
-wLITBsWvLzsa/bpJdySDY/DD73KU3r54vCZBVrJRZdWO6GdLx1dvIyWlZh0a
-xREyAf6cuL5/hbyE4w0x8CijZTQ4qBgiY12w6229aqf9fhm0bMtCPBZmqMpH
-bzythP0nyyYTfUY3aX9v707MNHs0s+gTG9lwlfU0DoVA8kzbqZLi2ZMqA5dX
-lyt1c3H+Jesc9Eef0KNNP+4+5S9IxXhJL7I01NeW7kLNudDm+ew2gmhJtcMV
-bmLDZi2Wuj8dnS3LxPtasYczGvzHNr8bP5Sq+aN/u2kzcmUJhRf3Uw3lQHok
-hv2dy9xLPCG6Mw5HQZ0jmz2NxBXDh7BjRWyTFwQq4M3KWsBaZJHYUptHBc8S
-S5la6gUt/oU2XrIJnYyl6Te0gmZakjLdoqFvJrE2RSzQgDxQUw6/H/9V9mUV
-aX2bUFVKKciq+EEV7rkPrbpf2KhQf5Gg3v9fVZPhs4BvACd82V+j43upiQ2V
-85sUOfETZQV33b3dYi/qA76bLOjgPnF1AeS55N92GsDObR/OwU0EZQNInAEQ
-AIZyGLscy38RK4Ee4xf87L3sE3lQDK5nJE54rRjWbMbU80EEre2ngRaU8REU
-obJ0Xfug0e28AmXlMVzkdj3BcVOY5QwVIyOKm9sZxhRzUATdC1k0WcVpXph8
-EICK6E7eZW9M99x4BTgOsO7VXoImFpzMypd+LP7JlraLHSDu3Mv51Pb1WqEM
-Ma48xfTTutPGF38/f5O4UYaOL3Vqb5O/iYNITZB26jLREbGpidUjPgyWfgZ4
-e7KE9HX1Qf9vkzR8s3nBGoK4i8D55rUEhYXdDXhHqzdLyhXnjpelHA5cY8wN
-dh62UloLXe3P4W9KE9FEk2VK89w2lO7Mlb/tNI0Vxhtf1Z+k361Z+6qqEK6Y
-mnSFwccoy4+5kVtafsZ/eo+gCHu6gW7fyR6gyaRW6HJh5llX9lBb46UdrnoG
-KJxiDagkM6zA3jaWcgFgN84+DDI25dkXhDgv8wd8ykNPZszKaaG/BAp102Gp
-OE++JwRe0AZ189pTCCetS4EE2dg1r8zORGw3R3jDeeAougiveATSHybrDNP6
-VBgElPAYI/zvsmH091Fp3ulM0XCwqqgzCL9XiIrP9FPXn9WLZrUKmPlwkHsU
-9WOc1nnnJRtPnor26iKjndpkzwKv8YNflWIa0MPY2DjDk6OVhEth4arhtPnc
-imowytmZ3PsvYVEv1tzm6LbdABEBAAHCwXYEGAEIACoFgmUDSJwJkP3Je4o5
-cjsPApsMFiEE4Vud/bKPTWgRpVq8/cl7ijlyOw8AAMyFEAC2AW4ilEVQWI64
-ovCA0FkFlQhGpPh01p62UNXz1a36Dk823r+TzlGmLzsTzkiK+4xWAayYt9lY
-dk+Buo9KigGS3d7nLeZXy23SPuQO5VFkVTa9wsU3pSo2lV8d4/s0gSADw2No
-Sg6DovtAbu8HyQIhks5yr3CDP9E9qg25FvCrwSpQAMXOw0+trcn+FRZl3+gP
-b+XvSe6JzJADgqkMHYn02fPtFiOB0FTN9ycVZjtkBtL3ikjfnNk2YhVd4jj2
-8S9cyx44XkW2rFfjIjcO1yB0aRwGSwq2GdlDwkE5zux6cgbTjigtLTrmZD/x
-rXP+DK/abfkIxSxtwQgzcEpqjMhlRAvDy84/qiRjrEruLPYpsJdZ4O0oj+b2
-n4M/qAtY8TO1jXmzQe73HJ32eR8qVv9dDNz6ne2VOtYec9skXjLhMsZhjdie
-K2S0NMFLjYwxUEmHl62JEPh4B0EzjFtw7RVkVlBSHz3TZlubYM1uhkWl2KrY
-ax+rKgaMRqKFQ0LV8OZDlpR3YLFCTPcAf45eW7Am1dSpsULM8HQeFzrPsF9k
-PRlOuJsvmhTRXYaa4QE0es5WUWXpzcMoB6ib0rzhAyR40ahC91CFMDOTnw14
-dRiDnrMJGNYx5N+vGiytYjc8RqGdD3Qm0tJpDXTUL82dHI70OctKdDbh4tSj
-4wjNbzGLRA==
-=PKn4
------END PGP PUBLIC KEY BLOCK-----</textarea>
-                        </p>
                     </div>
-                    <p class="hero ae-2"><span><a href="projects/index.html">Click for more Projects!</a></span></p>
                     <div class="fix-9-12">
-                        <a href="r/LinkedIn.html" target="_blank" class="button hollow ae-5"><img
+                        <a href="r/linkedin.html" target="_blank" class="button hollow ae-5"><img
                                 src="assets/img/LI-Logo.png" height="50" /></a>
                     </div>
                     <div class="fix-9-12">
-                        <a href="r/GitHub.html" target="_blank" class="button hollow ae-5"><img
+                        <a href="r/github.html" target="_blank" class="button hollow ae-5"><img
                                 src="assets/img/GitHub_Logo_White.png" height="63" /></a>
                     </div>
                     <div class="fix-9-12">
-                        <a href="r/X.html" target="_blank" class="button hollow ae-5"><img
+                        <a href="r/x.html" target="_blank" class="button hollow ae-5"><img
                                 src="assets/img/x-logo-white.png" height="63" /></a>
                     </div>
                 </div>
             </div>
         </div>
         <div class="background" style="background-image: url(assets/img/background/doge.gif)"></div>
+        <nav class="panel bottom">
+            <div class="sections desktop">
+                <div class="left">
+                    <ul class="menu uppercase">
+                        <li><a class="light ae-6 fromBottom" href="pgp.html">EMAIL PGP KEY</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav> 
     </section>
     <!-- Loading Progress Bar -->
     <div class="progress-bar darkGreen"></div>
