--- a/cv/rene.html
+++ b/cv/rene.html
@@ -3,19 +3,22 @@
 "<span id="k">Hey there, nice to see you here.</span>" My name is Rene Kärkkäinen.
 <p>Welcome,</p>
 <p>
-  I am a 17-year-old technology enthusiast from Finland.
+  I am a student at Business College Helsinki, pursuing a vocational degree in IT and high school at the same time, balancing both academic and practical education.
 </p>
 <p>
   I am very laid back and trying to approach situations with positivity and humor. 
-  <br /><br /><br />Besides IT I also like music and woodworking. 
-  <br /><br /><br />I am currently studying Information and Communications Technology as a
-  dual qualification program at Helsinki Business College.
-  <br /><br /><br />You can checkout some of my projects on my <a href="https://r3ne.net">website</a>, but if you are more tech savy, here is my
+  <br /><br /><br />I am passionate about cyber security, the practice of protecting systems, networks, and programs from digital attacks. I have learned some basic concepts and skills in cyber security, such as encryption, authentication, and network security. I have also explored some of the current trends and issues in cyber security, such as cloud computing, artificial intelligence, and ransomware. I have also completed various courses and certificates in these areas.
+  <br /><br /><br /> have also worked at WithSecure (formerly F-Secure), the leading cyber security company in the nordics. I have learned how to use cutting-edge technologies and methodologies to create secure and scalable systems and applications.
+  <br><br><br>I am seeking opportunities in IT, especially in cyber security, data analysis, or machine learning, where I can also contribute to enhancing the cyber security of the systems and applications I work on. I work well in a team, learn quickly, and solve problems effectively.
+  <br /><br /><br />You can checkout some of my projects on my <a href="https://karkkainen.net">website</a>, but if you are more tech savy, here is my
   <a href="https://github.com/JAAKKQ"> GitHub</a> link.
 </p>
 <p>You can visit my LinkedIn, here: <a href="https://www.linkedin.com/in/r3ne/">LinkedIn</a> <br /></p>
 
 You can also contact me through email, feel free to send me an email at
-<a href="mailto: karkkainen@r3ne.net">"karkkainen@r3ne.net"</a>.
+<a href="mailto: karkkainen@r3ne.net">"rene@karkkainen.net"</a>.
 
-<p>Kiitos!</p>
+<b>Best Regards,</b>
+<p>Rene Kärkkäinen</p>
+<p>___________________</p>
+<p>rene@karkkainen.net</p>
