--- a/cv/rene.html
+++ b/cv/rene.html
@@ -7,11 +7,11 @@
 </p>
 <p>
   I am very laid back and trying to approach situations with positivity and humor. 
-  <br /><br /><br />I am passionate about cyber security, the practice of protecting systems, networks, and programs from digital attacks. I have learned some basic concepts and skills in cyber security, such as encryption, authentication, and network security. I have also explored some of the current trends and issues in cyber security, such as cloud computing, artificial intelligence, and ransomware. I have also completed various courses and certificates in these areas.
+  <br /><br /><br />I am passionate about cyber security, the practice of protecting systems, networks, and programs from digital attacks. I have learned some basic concepts and skills in cyber security, such as encryption, authentication, and network security. I have completed various courses and certificates in these areas.
+  <br><br><br>I have also explored some of the current trends and issues in cyber security, such as cloud computing, artificial intelligence, and ransomware.
   <br /><br /><br />I have also worked at WithSecure (formerly F-Secure), the leading cyber security company in the nordics. I have learned how to use cutting-edge technologies and methodologies to create secure and scalable systems and applications.
   <br><br><br>I am seeking opportunities in IT, especially in cyber security, data analysis, or machine learning, where I can also contribute to enhancing the cyber security of the systems and applications I work on. I work well in a team, learn quickly, and solve problems effectively.
-  <br /><br /><br />You can checkout some of my projects on my <a href="https://karkkainen.net">website</a>, but if you are more tech savy, here is my
-  <a href="https://github.com/JAAKKQ"> GitHub</a> link.
+  <br /><br /><br />You can checkout some of my projects on my <a href="https://karkkainen.net">website</a>, but if you are more tech savy, here is my<a href="https://github.com/JAAKKQ"> GitHub</a> link.
 </p>
 <p>You can visit my LinkedIn, here: <a href="https://www.linkedin.com/in/r3ne/">LinkedIn</a> <br /></p>
 
