Updates to front page

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                             <div class="typewriter">
                                 <div class="light ae-1 fromrRight">
                                     <p id="typing-text" class="opacity-8"></p>
-                                    <a href="#contact" class="button social-behance cropBottom ae-7 fromCenter"><i class="fa fa-envelope-o" aria-hidden="true"></i>
-                                        Contact</a>
+                                    <a href="#contact" class="button social-behance cropBottom ae-7 fromCenter"><i class="fa fa-envelope-o" aria-hidden="true"></i> Contact</a>
+                                    <a href="cv/index.html" class="button social-behance cropBottom ae-7 fromCenter"><i class="fa fa-file-text-o" aria-hidden="true"></i> CV</a>
                                 </div>
                             </div>
                         </div>
@@ -252,6 +252,7 @@
                 <div class="left">
                     <ul class="menu uppercase">
                         <li><a class="light ae-6 fromBottom" href="pgp.html">EMAIL PGP KEY</a></li>
+                        <li><a class="light ae-6 fromBottom" href="cv/index.html">TERMINAL CV</a></li>
                     </ul>
                 </div>
             </div>
