--- a/pgp.html
+++ b/pgp.html
@@ -13,7 +13,7 @@
     <meta name="keywords" content="rene, r3ne, karkkainen" />
 
     <!-- Page Title -->
-    <title>Rene Kärkkäinen | Portfolio</title>
+    <title>Rene Kärkkäinen | PGP Key</title>
 
     <!-- Compressed Styles -->
     <link href="css/slides.min.css" rel="stylesheet" type="text/css">
