--- a/cv/rene.html
+++ b/cv/rene.html
@@ -20,5 +20,4 @@
 Feel free to send me an email at <a href="mailto: rene@karkkainen.net">"rene@karkkainen.net"</a>.
 
 <br>
-<b>Best Regards,</b>
-<p>Rene@Karkkainen.net</p>
+<b>Thank you for reading!</b>
