New text, and new button color

--- a/projects/open.html
+++ b/projects/open.html
@@ -15,7 +15,7 @@
 <header>
     <ul class="nav-container">
         <li>
-            <a href="../index.html">Home</a>
+            <a href="../index.html">Main Page</a>
         </li>
         <li>
             <a href="index.html">Projects</a>
@@ -65,9 +65,4 @@
 
     <script src="js/open.js"></script>
 </body>
-
-<footer>
-    <a href="https://github.com/JAAKKQ/r3ne.net/tree/main/projects" target="_blank">Click here for site source code!</a>
-</footer>
-
 </html>
