--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                             <div class="typewriter">
                                 <div class="light ae-1 fromrRight">
                                     <p id="typing-text" class="opacity-8"></p>
-                                    <a href="#contact" class="button social-behance cropBottom ae-7 fromCenter"><i class="fa fa-envelope-o" aria-hidden="true"></i> Contact</a>
-                                    <a href="cv/index.html" class="button social-behance cropBottom ae-7 fromCenter"><i class="fa fa-file-text-o" aria-hidden="true"></i> CV</a>
+                                    <a href="#contact" class="button primary-button cropBottom ae-7 fromCenter"><i class="fa fa-envelope-o" aria-hidden="true"></i> Contact</a>
+                                    <a href="cv/index.html" class="button primary-button cropBottom ae-7 fromCenter"><i class="fa fa-file-text-o" aria-hidden="true"></i> CV</a>
                                 </div>
                             </div>
                         </div>
@@ -95,13 +95,13 @@
                                     created a Discord bot to attract the younger people.
                                 </p>
                                 <a href="https://discord.com/api/oauth2/authorize?client_id=940968101627969598&permissions=277025410048&scope=bot%20applications.commands"
-                                    target="_blank" class="button social-behance cropBottom ae-7 fromCenter"><i class="fa fa-plus-square-o" aria-hidden="true"></i>
+                                    target="_blank" class="button primary-button cropBottom ae-7 fromCenter"><i class="fa fa-plus-square-o" aria-hidden="true"></i>
                                     Invite Bot</a>
                                 <a href="https://top.gg/bot/940968101627969598" target="_blank"
-                                    class="button social-behance cropBottom ae-7 fromCenter"><i class="fa fa-plus-square-o" aria-hidden="true"></i>
+                                    class="button primary-button cropBottom ae-7 fromCenter"><i class="fa fa-plus-square-o" aria-hidden="true"></i>
                                     Top.gg</a>
                                 <a href="https://github.com/JAAKKQ/pyexhange" target="_blank"
-                                    class="button social-behance cropBottom ae-7 fromCenter"><i class="fa fa-download" aria-hidden="true"></i>
+                                    class="button primary-button cropBottom ae-7 fromCenter"><i class="fa fa-download" aria-hidden="true"></i>
                                     Source</a>
                             </li>
                         </ul>
@@ -165,7 +165,7 @@
                                     </p>
                                 </div>
                                 <a href="projects/open.html?project=PP-215" target="_blank"
-                                    class="button social-behance  cropBottom ae-7 fromCenter"><i class="fa fa-external-link" aria-hidden="true"></i>
+                                    class="button primary-button  cropBottom ae-7 fromCenter"><i class="fa fa-external-link" aria-hidden="true"></i>
                                     Learn More</a>
                             </li>
                             <li class="col-1-12">&nbsp;</li>
@@ -195,12 +195,12 @@
                                     </p>
                                 </div>
                                 <a href="./records/index.html" target="_blank"
-                                    class="button social-behance  cropBottom ae-7 fromCenter"><i class="fa fa-external-link" aria-hidden="true"></i> Demo</a>
+                                    class="button primary-button  cropBottom ae-7 fromCenter"><i class="fa fa-external-link" aria-hidden="true"></i> Demo</a>
                                 <a href="https://github.com/JAAKKQ/Vinyl-Manager/" target="_blank"
-                                    class="button social-behance  cropBottom ae-7 fromCenter"><i class="fa fa-download" aria-hidden="true"></i>
+                                    class="button primary-button  cropBottom ae-7 fromCenter"><i class="fa fa-download" aria-hidden="true"></i>
                                     Source</a>
                                 <a href="projects/open.html?project=Vinyl-Manager" target="_blank"
-                                    class="button social-behance  cropBottom ae-7 fromCenter"><i class="fa fa-external-link" aria-hidden="true"></i> Learn More</a>
+                                    class="button primary-button  cropBottom ae-7 fromCenter"><i class="fa fa-external-link" aria-hidden="true"></i> Learn More</a>
                             <li class="col-1-12">&nbsp;</li>
                             <li class="col-5-12 bottom">
                                 <img src="assets/img/Screenshot-vinyldb-console.png" data-action="zoom"
@@ -232,15 +232,15 @@
                         </p>
                     </div>
                     <div class="fix-9-12">
-                        <a href="r/linkedin.html" target="_blank" class="button hollow ae-5"><img
+                        <a href="r/linkedin.html" target="_blank" class="button hollow ae-2"><img
                                 src="assets/img/LI-Logo.png" height="50" /></a>
                     </div>
                     <div class="fix-9-12">
-                        <a href="r/github.html" target="_blank" class="button hollow ae-5"><img
+                        <a href="r/github.html" target="_blank" class="button hollow ae-2"><img
                                 src="assets/img/GitHub_Logo_White.png" height="63" /></a>
                     </div>
                     <div class="fix-9-12">
-                        <a href="r/x.html" target="_blank" class="button hollow ae-5"><img
+                        <a href="r/x.html" target="_blank" class="button hollow ae-2"><img
                                 src="assets/img/x-logo-white.png" height="63" /></a>
                     </div>
                 </div>
