--- a/projects/index.html
+++ b/projects/index.html
@@ -16,7 +16,7 @@
 <header>
     <ul class="nav-container">
         <li>
-            <a href="../index.html">Home</a>
+            <a href="../index.html">Main Page</a>
         </li>
         <li>
             <a href="../records/index.html">Vinyl Records</a>
@@ -31,9 +31,4 @@
 
     <script src="js/index.js"></script>
 </body>
-
-<footer>
-    <a href="https://github.com/JAAKKQ/r3ne.net/tree/main/projects" target="_blank">Click here for site source code!</a>
-</footer>
-
 </html>
