--- a/r/github.html
+++ b/r/github.html
@@ -7,6 +7,6 @@
     <meta http-equiv="refresh" content="0; url = https://github.com/JAAKKQ">
 </head>
 <body>
-    
+    Redirecting to https://github.com/JAAKKQ
 </body>
 </html>
