--- a/r/linkedin.html
+++ b/r/linkedin.html
@@ -7,6 +7,6 @@
     <meta http-equiv="refresh" content="0; url = https://www.linkedin.com/in/renekarkkainen/">
 </head>
 <body>
-    
+    Redirecting to https://www.linkedin.com/in/renekarkkainen/
 </body>
 </html>
