--- a/r/x.html
+++ b/r/x.html
@@ -7,6 +7,6 @@
     <meta http-equiv="refresh" content="0; url = https://x.com/karkkainen_net">
 </head>
 <body>
-    
+    Redirecting to https://x.com/karkkainen_net
 </body>
 </html>
