--- a/cv/rene.html
+++ b/cv/rene.html
@@ -1,18 +1,17 @@
 <span id="a">rene@karkkainen.net</span>:<span id="b">~</span><span id="c">$</span> cd /home/rene/
 <span id="a">rene@karkkainen.net</span>:<span id="b">~</span><span id="c">$</span> cat aboutMe.txt<br /><br />
-"<span id="k">Hey there, nice to see you here.</span>" My name is Rene Kärkkäinen.
 <p>
-  Hello! I'm Rene Kärkkäinen, a student at Business College Helsinki, pursuing a vocational degree in IT while juggling high school. I thrive on a blend of academic knowledge and hands-on experience.
+  Hello! I'm <span id="k">Rene Kärkkäinen</span>, a student at Business College Helsinki, pursuing a vocational degree in IT while juggling high school. I thrive on a blend of academic knowledge and hands-on experience.
 
-  Passionate about cyber security, I've acquired skills in encryption, authentication, and network security through various courses and certificates. My professional journey includes valuable experience at WithSecure (formerly F-Secure), where I mastered cutting-edge technologies for creating secure and scalable systems.
+  Passionate about cyber security, I've acquired skills in encryption, authentication, and network security through various courses and certificates. My professional journey includes valuable experience at WithSecure (formerly F-Secure), a leading cyber security company in the Nordics.
 
   At home, I've built a robust server network from scratch. A physical server running ESXi serves as the backbone, fortified with pfSense as the firewall, OpenVPN servers for remote access, DHCP, DNS, and Suricata for intrusion detection. I've organized the network using VLANs, creating isolated environments for different purposes.
 
   Within the ESXi server, TrueNAS Scale provides redundant storage connected via NFS. An Ubuntu Server hosts my NGINX web server, while another serves as a safe space for testing potentially risky code.
 
-  Each server operates on designated networks—Web Server on "Secure," Testing Server on "Unsecure," and ESXi, pfSense, and TrueNAS on "Trusted." I've established my certificate authority, adding a layer of security by creating certificates for all servers. This hands-on experience has honed my skills in network configuration, DNS troubleshooting, DHCP management, and system troubleshooting.
+  Each server operates on designated networks—Web Server on "Secure", Testing Servers on "Unsecure," and ESXi, pfSense, and TrueNAS on "Trusted". I've established my certificate authority, adding a layer of security by creating certificates for all the servers. This hands-on experience has honed my skills in network configuration, DNS troubleshooting, DHCP management, and system troubleshooting.
  
-  Actively seeking global IT opportunities, particularly in cyber security, data analysis, or machine learning, I bring a quick learning ability, effective problem-solving skills, and strong teamwork. Explore my projects on <a href="../index.html">karkkainen.net</a> or delve into my tech side on GitHub <a href="../r/github.html">GitHub.com/JAAKKQ</a>.
+  Actively seeking global IT opportunities, particularly in cyber security, data analysis, or machine learning, I bring a quick learning ability, effective problem-solving skills, and strong teamwork. Explore my projects on <a href="../index.html" target="_blank">karkkainen.net</a> or delve into my tech side on GitHub <a href="../r/github.html" target="_blank">GitHub.com/JAAKKQ</a>.
 
-  Connect with me on <a href="../r/linkedin.html">LinkedIn.com/n/ReneKarkkainen</a> or drop me an email at <a href="mailto: rene@karkkainen.net">rene@karkkainen.net</a>. <b>Thank you for reading!</b>
+  Connect with me on <a href="../r/linkedin.html" target="_blank">LinkedIn.com/n/ReneKarkkainen</a> or drop me an email at <a href="mailto: rene@karkkainen.net">rene@karkkainen.net</a>. <b>Thank you for reading!</b>
 </p>
